src/objects/RT1__Recording_Registration__c.object
<CustomObject>
    <fields>
        <fullName>RT1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
        <relationshipName>Recording_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__InviteSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a recording registration has had an email sent to them.</description>
        <label>InviteSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
        <relationshipName>Recording_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__PlaybackDate__c</fullName>
        <label>Playback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__PlaybackDuration__c</fullName>
        <label>Playback Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__Recording__c</fullName>
        <label>Recording Title</label>
        <referenceTo>RT1__Recording__c</referenceTo>
        <relationshipLabel>Recording Registrations</relationshipLabel>
        <relationshipName>Recording_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer1__c</fullName>
        <label>Registration Answer 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer2__c</fullName>
        <label>Registration Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer3__c</fullName>
        <label>Registration Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationId__c</fullName>
        <label>RegistrationId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion1__c</fullName>
        <label>Registration Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion2__c</fullName>
        <label>Registration Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion3__c</fullName>
        <label>Registration Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Status__c</fullName>
        <label>Recording Registrant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recording Registration</label>
    <nameField>
        <label>Recording Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recording Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>